CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

23 April 2008
+ Form.php - changed POST to REQUEST in testDate and getPostedDate
+ DBPager
  o Added caching system to retain pager settings. Set with
    cacheQueries function.
  o Added convertDate function to format date columns
  o Added addSortHeader function to allow a clickable column header.
+ Javascript
  o Added a checkbox trigger for check all.
  o Fixed a bug in open_window that prevented button use.

+ Updated: javascript/check_all/body.js, default.php, head.js,
           README.txt
           javascript/open_window/default.php

+ Themes
  o Added a new stardard class "highlight" for hovering on rows.

18 April 2008
+ Fixed filecabinet conversion.
+ Publish by date added to blog conversion.

16 April 2008
+ Added home url to open_window address because Internet Explorer
(spit, spit) makes links relative to the mod_rewrite path.

11 April 2008
+ Added autocomplete jquery plugin

9 April 2008
+ Added times for showing and hiding key elements.

7 April 2008
+ Changed function call in Setup to manual copy to avoid confusion in File class

4 April 2008
+ Updated pagesmith and categories conversion for new File Cabinet.

Version 1.8.1
--------------------------------------------------------------
1 April 2008
+ Change to pullTables to allow create unique index to work properly.

31 March 2008
+ Form class was ignoring the use_auth_key variable.

Version 1.8.0
---------------------------------------------------------------
26 March 2008
+ Fixed multiple select input

23 March 2008
+ Fix for atHome in Core

20 March 2008
+ getCurrentUrl now strips any forward slash from the front of the
  address
+ Added not like and not ilike to where.
+ Update missing fck and tinymce copy
+ Update missing multiple_select javascript

17 March 2008
+ copy_directory has a fourth parameter to ignore hidden files.